CB-4823 CB-4823 fixes scroll for collapsed error icon

--- a/webapp/packages/plugin-data-viewer/src/TableViewer/TableError.module.css
+++ b/webapp/packages/plugin-data-viewer/src/TableViewer/TableError.module.css
@@ -54,7 +54,9 @@
   & .iconOrImage {
     cursor: pointer;
   }
-
+  &.animated {
+    overflow: hidden;
+  }
   & .errorMessage,
   & .controls {
     display: none;
@@ -62,6 +64,7 @@
 }
 
 .animated {
+  overflow: auto;
   pointer-events: auto;
   opacity: 1;
 }
